--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -234,7 +234,7 @@
 \email{guillaume.laplanteanfossi@unimelb.edu.au}
 
 \author[V. Pilaud]{Vincent Pilaud}
-\address[Vincent Pilaud]{CNRS \& LIX, \'Ecole Polytechnique, Palaiseau}
+\address[Vincent Pilaud]{CNRS \& LIX, \'Ecole Polytechnique, Palaiseau, France}
 \email{vincent.pilaud@lix.polytechnique.fr}
 \urladdr{\url{http://www.lix.polytechnique.fr/~pilaud/}}
 
